# rust-crypto-cli

./: .env  Cargo.toml  README.md
src/: app.rs  fetch.rs  main.rs
