[package]
name = "rust-cli-crypto"
version = "0.1.0"
authors = ["Fabricio Dematte <fabriciodematte7p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = "0.11.3"
serde_json = "1.0.59"
