[package]
name = "rust-cli-crypto"
version = "0.1.0"
authors = ["Fabricio Dematte <fabriciodematte7p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.59"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde_derive = "1.0.126"
serde = "1.0.126"
